--- a/recipes/asiago-toasted-cheese-puffs.html
+++ b/recipes/asiago-toasted-cheese-puffs.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div>
-            <a href="/">
+            <a href="../index.html">
                 <h1 class="main-heading">Odin Recepes</h1>
             </a>
         </div><br>
-        <a href="/">Home</a>
+        <a href="../index.html">Home</a>
     </header>
     <h1>Asiago Toasted Cheese Puffs</h1>
     <img class="food-image" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3837906.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Asiago Toasted Cheese Puffs">
