--- a/recipes/eggsbenedictcasserole.html
+++ b/recipes/eggsbenedictcasserole.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div>
-            <a href="/">
+            <a href="../index.html">
                 <h1 class="main-heading">Odin Recepes</h1>
             </a>
         </div><br>
-        <a href="/">Home</a>
+        <a href="../index.html">Home</a>
     </header>
     
     <h1>Eggs Benedict Casserole</h1>
