--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div>
-            <a href="/">
+            <a href="../index.html">
                 <h1 class="main-heading">Odin Recepes</h1>
             </a>
         </div><br>
-        <a href="/">Home
+        <a href="../index.html">Home
         </a>
     </header>
     
