--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
                 <h1 class="main-heading">Odin Recepes</h1>
             </a>
     </header>
+    <main>
     <ul>
         <h2>Browse recepes</h2>
         <li><a href="recipes/lasagna.html">Recipe for Lasagna</a></li><br>
         <li><a href="recipes/eggsbenedictcasserole.html">Recepes for Eggs Benedict Casserol</a></li><br>
         <li><a href="recipes/asiago-toasted-cheese-puffs.html">Recipe for Asiago Toasted Cheese Puffs</a></li>
     </ul>
-
+    </main>
+    <footer>
+    </footer>
 </body>
 
 </html>
