--- a/recipes/asiago-toasted-cheese-puffs.html
+++ b/recipes/asiago-toasted-cheese-puffs.html
@@ -16,6 +16,7 @@
         </div><br>
         <a href="../index.html">Home</a>
     </header>
+    <main>
     <h1>Asiago Toasted Cheese Puffs</h1>
     <img class="food-image" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F3837906.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="Asiago Toasted Cheese Puffs">
     <br><br>
@@ -43,5 +44,7 @@
         <li>On a baking sheet, arrange the baguette slices in a single layer. Spread the Asiago mixture on the slices. Broil for 3
         minutes, or until the cheese is melted and lightly browned. Serve immediately.</li>
     </ol>
+    </main>
+    <a href="#">Go to top</a>
 </body>
 </html>
