--- a/recipes/eggsbenedictcasserole.html
+++ b/recipes/eggsbenedictcasserole.html
@@ -16,7 +16,7 @@
         </div><br>
         <a href="../index.html">Home</a>
     </header>
-    
+    <main>
     <h1>Eggs Benedict Casserole</h1>
     <img class="food-image" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9368108.jpg&w=595&h=398&c=sc&poi=face&q=60" alt="Eggs Benedict Casserole">
     <br><br>
@@ -51,5 +51,7 @@
         <li>Whisk hollandaise sauce mix with 1 cup milk in a saucepan. Add margarine and bring to a boil, stirring frequently.
         Reduce heat to medium-low, simmer, and stir until thickened, about 1 minute. Drizzle sauce over casserole to serve.</li>
     </ol>
+</main>
+<a href="#">Go to top</a>
 </body>
 </html>
