--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../style/style.css">
     <title>Document</title>
 </head>
-<div>
 <body>
     <header>
         <div>
@@ -18,7 +17,7 @@
         <a href="../index.html">Home
         </a>
     </header>
-    
+    <main>
     <h1>Lasagna Recipe</h1>
     <img class="food-image" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9396682.jpg&w=638&h=427&c=sc&poi=face&q=60"
         alt="Lasagna"><br>
@@ -45,6 +44,7 @@
         meat mixture and cheese mixture until pan is filled.</li>
         <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
     </ol>
-</div>
+</main>
+<a href="#">Go to top</a>
 </body>
 </html>
