--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-            <a href="/">
+            <a href="../index.html">
                 <h1 class="main-heading">Odin Recepes</h1>
             </a>
     </header>
