--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-            <a href="../index.html">
-                <h1 class="main-heading">Odin Recepes</h1>
-            </a>
+        <div>
+            <h1 class="mainheading"><a href="#" class="mainheading1">Odin Recepes</a></h1>
+        </div>
     </header>
     <main>
     <ul>
