--- a/recipes/eggsbenedictcasserole.html
+++ b/recipes/eggsbenedictcasserole.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div>
-            <a href="../index.html">
-                <h1 class="main-heading">Odin Recepes</h1>
-            </a>
-        </div><br>
-        <a href="../index.html">Home</a>
+            <h1 class="mainheading"><a href="../index.html" class="mainheading1">Odin Recepes</a></h1>
+        </div>
+        <div class="homelink">
+            <a href="../index.html">Home</a>
+        </div>
     </header>
     <main>
     <h1>Eggs Benedict Casserole</h1>
