--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
 
 <body>
     <header>
-<<<<<<< HEAD
         <div>
             <h1 class="mainheading"><a href="#" class="mainheading1">Odin Recepes</a></h1>
         </div>
-=======
-            <a href="/index.html">
-                <h1 class="main-heading">Odin Recepes</h1>
-            </a>
->>>>>>> 72f0b32dd891b2ee2f5cbef92a6f759f69fa9c50
+        <div class="homelink">
+            <a href="#">Home</a>
+        </div>
     </header>
     <main>
     <ul>
